--- a/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/edit/task-edit.component.html
@@ -1,4 +1,4 @@
-<div tds-autofocus tds-handle-escape (escPressed)="cancelCloseDialog()" class="task-detail-component modal fade in tds-ui-modal-decorator" id="task-edit-component" data-backdrop="static" tabindex="-1" role="dialog">
+<div tds-autofocus tds-handle-escape (escPressed)="cancelCloseDialog()" tds-autocenter class="task-detail-component modal fade in tds-ui-modal-decorator" id="task-edit-component" data-backdrop="static" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content resizable tds-angular-component-content"
              tds-ui-modal-decorator=""
@@ -338,13 +338,13 @@
                                     <tr>
                                         <td valign="top">
                                             <kendo-grid
-                                                    *ngIf="dataGridTaskPredecessorsHelper"
+                                                    *ngIf="dataGridTaskPredecessorsHelper && modelHelper"
                                                     class="successor-predecessor-table"
                                                     [data]="dataGridTaskPredecessorsHelper.gridData"
                                                     [sort]="dataGridTaskPredecessorsHelper.state.sort"
                                                     [sortable]="{mode:'single'}"
                                                     [resizable]="false"
-                                                    [rowClass]="rowStatusColor"
+                                                    [rowClass]="modelHelper.rowStatusColor"
                                                     (sortChange)="dataGridTaskPredecessorsHelper.sortChange($event)">
                                                     <!-- Toolbar Template -->
                                                     <ng-template kendoGridToolbarTemplate [position]="'top'">
@@ -386,13 +386,13 @@
                                         </td>
                                         <td valign="top">
                                             <kendo-grid
-                                                    *ngIf="dataGridTaskSuccessorsHelper"
+                                                    *ngIf="dataGridTaskSuccessorsHelper && modelHelper"
                                                     class="successor-predecessor-table"
                                                     [data]="dataGridTaskSuccessorsHelper.gridData"
                                                     [sort]="dataGridTaskSuccessorsHelper.state.sort"
                                                     [sortable]="{mode:'single'}"
                                                     [resizable]="false"
-                                                    [rowClass]="rowStatusColor"
+                                                    [rowClass]="modelHelper && rowStatusColor"
                                                     (sortChange)="dataGridTaskSuccessorsHelper.sortChange($event)">
                                                 <!-- Toolbar Template -->
                                                 <ng-template kendoGridToolbarTemplate [position]="'top'">
